updates and stuff

--- a/math/index.html
+++ b/math/index.html
@@ -2,8 +2,7 @@
 	<head>
 		<title>General Math Stuff</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
-		<script src="js/math.js"></script>
-		<script src="js/main.js"></script>	
+		<script src="js/math.js"></script>	
 	</head>
 	<body>
 		<div id="container">
@@ -16,6 +15,7 @@
 					<a href="../math/index.html">Math</a><br>
 					<a href="../msuic/index.html">Msuic</a><br>
 					<a href="../encryption/index.html">Encryption</a><br>
+					<a href="../love/index.html">Love</a><br>
 				</div>
 			</div>
 			<div id="main">
@@ -102,7 +102,7 @@
 						</script>
 						<form>
 							Degree of this equation: <input id="solveDegreeMessage" type="text">
-							<input id="solveDegreeButton" value="Click Me!" type="button" onClick="solveDegree()">
+							<input id="solveDegreeButton" value="Click Me!" type="button" onClick="solveDegree()"><br>
 							Values to enter: <div id="solveDegreeInput"></div>
 							<input id="solvePolyButton" value="Click Me!" type="button" onClick="solvePoly()"><br>
 							<a>Your values are: </a>
