--- a/msuic/index.html
+++ b/msuic/index.html
@@ -14,11 +14,12 @@
 					<a href="../math/index.html">Math</a><br>
 					<a href="../msuic/index.html">Msuic</a><br>
 					<a href="../encryption/index.html">Encryption</a><br>
+					<a href="../love/index.html">Love</a><br>
 				</div>
 			</div>
 			<div id="main">
 				<div id="mainContent">
-					
+
 				</div>
 			</div>
 		</div>
