--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 					<a href="math/index.html">Math</a><br>
 					<a href="msuic/index.html">Msuic</a><br>
 					<a href="encryption/index.html">Encryption</a><br>
+					<a href="love/index.html">Love</a><br>
 				</div>
 			</div>
 			<div id="main">
