fixed typo, changed color scheme, fixed title formatting, redid overall formatting, general cleanup

--- a/encryption/index.html
+++ b/encryption/index.html
@@ -2,8 +2,10 @@
 	<head>
 		<title>CAUSE SCIENCE</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<script src="../main.js"></script>
+		<script src="../math.js"></script>
 	</head>
-	<body>
+	<body onLoad="setSizes()">
 		<div id="container">
 			<div id="header">
 				<p id="headerTitle"><b>Lets do some encrypting.</b></p>
