--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 	<head>
 		<title>Welcome home :)</title>
-		<link rel="stylesheet" type="text/css" href="www.eshsgaming.com/trashy111/css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src="math.js"></script>
+		<script src="main.js"></script>
 	</head>
-	<body>
+	<body onLoad="setSizes()">
 		<div id="container">
 			<div id="header">
 				<p id="headerTitle"><b><i>Good morning</i> :)</b></p>
