--- a/math/index.html
+++ b/math/index.html
@@ -2,9 +2,10 @@
 	<head>
 		<title>General Math Stuff</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
-		<script src="js/math.js"></script>	
+		<script src="../math.js"></script>
+		<script src="../main.js"></script>	
 	</head>
-	<body>
+	<body onLoad="setSizes()">
 		<div id="container">
 			<div id="header">
 				<p id="headerTitle"><b>Just use your calculator.</b></p>
