--- a/msuic/index.html
+++ b/msuic/index.html
@@ -1,4 +1,4 @@
-<html>
+<html id="html">
 	<head>
 		<title>General Music Stuff</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
