cleaned up links, made image

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 	<head>
 		<title>Welcome home :)</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script src="math.js"></script>
-		<script src="main.js"></script>
+		<link rel="icon" type="image/gif" href="images/trashysweg.png" />
+		<script src="js/math.js"></script>
+		<script src="js/main.js"></script>
+		<script src="js/link.js"></script>
 	</head>
 	<body onLoad="setSizes()">
 		<div id="container">
