--- a/math/index.html
+++ b/math/index.html
@@ -2,23 +2,16 @@
 	<head>
 		<title>General Math Stuff</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
-		<script src="../math.js"></script>
-		<script src="../main.js"></script>	
+		<script src="../js/math.js"></script>
+		<script src="../js/main.js"></script>	
+		<script src="../js/link.js"></script>
 	</head>
-	<body onLoad="setSizes()">
+	<body onLoad="setSizes();loadLinks();">
 		<div id="container">
 			<div id="header">
 				<p id="headerTitle"><b>Just use your calculator.</b></p>
 			</div>
-			<div id="links">
-				<div id="linksContent">
-					<a href="../index.html">Home</a><br>
-					<a href="../math/index.html">Math</a><br>
-					<a href="../msuic/index.html">Msuic</a><br>
-					<a href="../encryption/index.html">Encryption</a><br>
-					<a href="../love/index.html">Love</a><br>
-				</div>
-			</div>
+			<div id="links"></div>
 			<div id="main">
 				<div id="mainContent">
 					<div id="pi">
