--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 			<div id="main">
 				<div id="mainContent">
 					My life.<br>
-					1 is done and distant, but certainly not forgotten.<br>
-					2 is actively trying, but is almost unwanted.<br>
-					3 is hiding, but whether hiding discontent or want I don't know.<br>
-					4 is improbable in terms of occurring, but is in some ways the closest.<br>
+					1 is done and distant, but certainly not forgotten.
+					2 is actively trying, but is almost unwanted.
+					3 is hiding, but whether hiding discontent or want I don't know.
+					4 is improbable in terms of occurring, but is in some ways the closest.
 				</div>
 			</div>
 		</div>
