updated math page, fixed sqrt function

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 			</div>
 			<div id="main">
 				<div id="mainContent">
-					My life.
-					1 is done and distant, but certainly not forgotten.
-					2 is actively trying, but is almost unwanted.
-					3 is hiding, but whether hiding discontent or want I don't know.
-					4 is improbable in terms of occurring, but is in some ways the closest.
+					<br><br><br><br><br><br><br><br>
+					<br><br><br><br><br><br><br><br><br>
+					<br><br><br><br><br><br><br><br>
+					&copy2014 Bradley Gallon, all rights reserved. This copyright includes the look, feel and code for this site. You may not copy, duplicate, or reuse any part of the HTML/CSS, Javascript, any other code or content used, design or content without express written permission. Failure to enforce the copyright does not grant you permission to violate the copyright. For more information, please read the terms and conditions.<br>
 				</div>
 			</div>
 		</div>
