--- a/math/index.html
+++ b/math/index.html
@@ -146,7 +146,7 @@
 								document.getElementById("solvePolyReturn").innerText = ""
 								for(degreeInteger=0;degreeInteger<(parseInt(solveDegreeMessage.value)+1);degreeInteger++){
 									if((parseInt(solveDegreeMessage.value)-degreeInteger)>0){
-										newDegreeInput.innerHTML += "<input id='solveDegreeMessage" + degreeInteger + "' type='text'>*x^" + (parseInt(solveDegreeMessage.value)-degreeInteger) + "+ ";
+										newDegreeInput.innerHTML += "<input id='solveDegreeMessage" + degreeInteger + "' type='text'>*x<sup>" + (parseInt(solveDegreeMessage.value)-degreeInteger) + "</sup>+ ";
 									}else{
 										newDegreeInput.innerHTML += "<input id='solveDegreeMessage" + degreeInteger + "' type='text'> = 0";
 									}
