--- a/links/index.html
+++ b/links/index.html
@@ -1,5 +1,6 @@
 <html>
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="icon" type="image/gif" href="images/trashysweg.png" />
 	<div id="linksContent">
 		<a href="index.html">Home</a><br>
 		<a href="math/index.html">Math</a><br>
