--- a/love/index.html
+++ b/love/index.html
@@ -1,7 +1,8 @@
 <html id="html">
 	<head onLoad="setSizes();Init()">
-		<link rel="stylesheet" type="text/css" href="../css/style.css">
 		<title>LEEK IS LOVE, SPIN IS LIFE</title>
+		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<link rel="icon" type="image/gif" href="../images/trashysweg.png"/>
 		<script src="../js/main.js"></script>
 		<script src="../js/math.js"></script>
 		<script src="../js/link.js"></script>
