--- a/msuic/index.html
+++ b/msuic/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>General Music Stuff</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<link rel="icon" type="image/gif" href="../images/trashysweg.png"/>
 		<script src="../js/main.js"></script>
 		<script src="../js/math.js"></script>
 		<script src="../js/link.js"></script>
@@ -11,9 +12,9 @@
 			<div id="header">
 				<script>
 					if(Math.random()<.5){
-						document.getElementById("header").innerHTML = '<p id="headerTitle"><b><i>Welcome to my msuic lab</i> :)</b></p>';
+						document.getElementById("header").innerHTML = '<p id="headerTitle"><b>Welcome to my msuic lab :)</b></p>';
 					} else {
-						document.getElementById("header").innerHTML = '<p id="headerTitle"><b><i>Welcome to my music lab</i> :)</b></p>';
+						document.getElementById("header").innerHTML = '<p id="headerTitle"><b>Welcome to my music lab :)</b></p>';
 					}
 				</script>
 			</div>
