--- a/encryption/index.html
+++ b/encryption/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>CAUSE SCIENCE</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<link rel="icon" type="image/gif" href="../images/trashysweg.png"/>
 		<script src="../js/main.js"></script>
 		<script src="../js/math.js"></script>
 		<script src="../js/link.js"></script>
