--- a/math/index.html
+++ b/math/index.html
@@ -16,7 +16,7 @@
 			<div id="main">
 				<div id="mainContent">
 					<div id="pi">
-						<p>16 Digits of Pi: 3.141592653589793</p>
+						<p>128 Digits of Pi: 3.14159265358979323846264338327950288419716939937510582097494459230781640628620899862803482534211706798214808651328230664709384460</p>
 					</div>
 					<div id="ln2">
 						<p>Natural logarithm of 2: 0.6931471805599453</p>
@@ -134,6 +134,36 @@
 							<input class="button" id="logButton" value="Click Me!" type="button" onClick="logIndex()">
 							<a>Your value is: </a>
 							<a id="logReturn"></a>
+						</form>
+					</div>
+<!--sin-->			<div>
+						<script>
+							var sinIndex = function () {
+								var sinMessage = document.getElementById("sinMessage");
+								var sinReturn  = document.getElementById("sinReturn");
+								sinReturn.innerText = math.sin(parseFloat(sinMessage.value));
+							}
+						</script>
+						<form>
+							Sine of a number: <input id="sinMessage" type="text">
+							<input class="button" id="sinButton" value="Click Me!" type="button" onClick="sinIndex()">
+							<a>Your value is: </a>
+							<a id="sinReturn"></a>
+						</form>
+					</div>
+<!--cos-->			<div>
+						<script>
+							var cosIndex = function () {
+								var cosMessage = document.getElementById("cosMessage");
+								var cosReturn  = document.getElementById("cosReturn");
+								cosReturn.innerText = math.cos(parseFloat(cosMessage.value));
+							}
+						</script>
+						<form>
+							Cosine of a number: <input id="cosMessage" type="text">
+							<input class="button" id="cosButton" value="Click Me!" type="button" onClick="cosIndex()">
+							<a>Your value is: </a>
+							<a id="cosReturn"></a>
 						</form>
 					</div>
 <!--solvePoly-->	<div id="solvePolynomials">
