--- a/love/index.html
+++ b/love/index.html
@@ -43,7 +43,7 @@
 				}
 			</script>
 	</head>
-	<body onLoad="setSizes();fuckyouObjects();loadLinks();Init();">
+	<body onLoad="setSizes();fuckyouObjects();loadLinks();Init();setSizes();"> <!--Shouldn't have to run it twice, but ugh -->
 		<div id="container">
 			<div id="header">
 				<div id="headerTitle">You've been spinning for <span id="time">0:00:00</span>.</div>
