--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <html>    
   <head>      
     <title>The Tudors</title>      
-    <meta http-equiv="refresh" content="0;URL='http://www.eshsgaming.com/trashy111/home/'" />    
+    <meta http-equiv="refresh" content="0;URL='home/index.html'" />    
   </head>    
   <body> 
     <p>This page has moved to a <a href="http://www.eshsgaming.com/trashy111/home/">
